# MultidimGrid

./: CMakeLists.txt  readme.md
include/: grid.hpp  traits.hpp
tests/: CMakeLists.txt  tests.cpp
